--- a/mtg/gor.html
+++ b/mtg/gor.html
@@ -1,4 +1,6 @@
-
+---
+layout: default
+---
 <h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn+&set=+[%22Guilds%20of%20Ravnica%22]&rarity=+[M]">Mythic Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
