--- a/mtg/gor.html
+++ b/mtg/gor.html
@@ -30,7 +30,7 @@ layout: default
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=455613">Impervious Greatwurm</a></td><td>Green</td><td>M</td><td>Buy-A-Box Promo</td></tr>
 </table>
 
-<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn+&set=+[%22Guilds%20of%20Ravnica%22]&rarity=+[R]">Rares</h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn+&set=+[%22Guilds%20of%20Ravnica%22]&rarity=+[R]">Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
