--- a/mtg/m19.html
+++ b/mtg/m19.html
@@ -3,7 +3,7 @@ title: Core Set 2019
 layout: default
 ---
 
-<h1>Mythic Rares</h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn%20,cn+&set=+[%22Core%20Set%202019%22]&name=+![%22Windreader%20Sphinx%22]&rarity=+[M]">Mythic Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
 	<td class="headerCell">#</td>
@@ -33,9 +33,10 @@ layout: default
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=447362">Vaevictis Asmadi, the Dire</a></td><td>Black/Red/Green</td><td>M</td><td>Core Set 2019</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=450248">Vivien of the Arkbow</a></td><td>Green</td><td>M</td><td>Core Set 2019, Planeswalker Deck</td></tr>
 	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=447344">Vivien Reid</a></td><td>Green</td><td>M</td><td>Core Set 2019</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=447344">Nexus of Fate</a></td><td>Blue</td><td>M</td><td>Buy-a-box Promo</td></tr>
 </table>
 
-<h1>Rares</h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn%20,cn%20,cn%20%20,cn+&set=+["Core%20Set%202019"]&name=+!["Volcanic%20Dragon"]+![Scapeshift]+!["Crucible%20of%20Worlds"]+![Millstone]&rarity=+[R]">Rares>/a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
