--- a/mtg/m19.html
+++ b/mtg/m19.html
@@ -36,7 +36,7 @@ layout: default
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=447344">Nexus of Fate</a></td><td>Blue</td><td>M</td><td>Buy-a-box Promo</td></tr>
 </table>
 
-<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn%20,cn%20,cn%20%20,cn+&set=+["Core%20Set%202019"]&name=+!["Volcanic%20Dragon"]+![Scapeshift]+!["Crucible%20of%20Worlds"]+![Millstone]&rarity=+[R]">Rares>/a></h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn%20,cn%20,cn%20%20,cn+&set=+["Core%20Set%202019"]&name=+!["Volcanic%20Dragon"]+![Scapeshift]+!["Crucible%20of%20Worlds"]+![Millstone]&rarity=+[R]">Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
