--- a/mtg/dominaria.html
+++ b/mtg/dominaria.html
@@ -31,7 +31,7 @@ layout: default
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=445853">Chandra, Bold Pyromancer</a></td><td>Red</td><td>M</td><td>Planeswalker Deck</td></tr>
 </table>
 
-<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn%20,cn+&set=+[%22Dominaria%22]&name=+![%22Serra%20Angel%22]+![%22Sage%20of%20Lat-Nam%22]+![Skizzik]+![%22Thorn%20Elemental%22]&rarity=+[R]">Rares</h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn%20,cn+&set=+[%22Dominaria%22]&name=+![%22Serra%20Angel%22]+![%22Sage%20of%20Lat-Nam%22]+![Skizzik]+![%22Thorn%20Elemental%22]&rarity=+[R]">Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
@@ -41,6 +41,63 @@ layout: default
         <td class="headerCell">Notes</td>
     </tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442894">Benalish Marshal</a></td><td>White</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442901">Daring Archaeologist</a></td><td>White</td><td>R</td><td></td></tr>
+            <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442904">Evra, Halcyon Witness</a></td><td>White</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442906">Fall of the Thran</a></td><td>White</td><td>R</td><td>Saga</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442923">Shalai, Voice of Plenty</a></td><td>White</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442924">Teshar, Ancestor's Apostle</a></td><td>White</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442927">Urza's Ruinous Blast</a></td><td>White</td><td>R</td><td></td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442930">The Antiquities War</a></td><td>Blue</td><td>R</td><td>Saga</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442943">Karn's Temporal Sundering</a></td><td>Blue</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442945">The Mirari Conjecture</a></td><td>Blue</td><td>R</td><td>Sage</td></tr>
+	    <tr><td>5*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442946">Naban, Dean of Iteration</a></td><td>Blue</td><td>R</td><td>Pre-release foil promo, foil x2</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442949">Precognition Field</a></td><td>Blue</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442956">Tempest Djinn</a></td><td>Blue</td><td>R</td><td></td></tr>
+	    <tr><td>5</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442964">Zahid, Djinn of the Lamp</a></td><td>Blue</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442976">Dread Shade</a></td><td>Black</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442983">Josu Vess, Lich Knight</a></td><td>Black</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442984">Kazarov, Sengir Pureblood</a></td><td>Black</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442986">Lich's Mastery</a></td><td>Black</td><td>R</td><td></td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442990">Rite of Belzenlok</a></td><td>Black</td><td>R</td><td>Saga</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442996">Torgaar, Famine Incarnate</a></td><td>Black</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443002">Yawgmoth's Vile Offering</a></td><td>Black</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443010">The First Eruption</a></td><td>Red</td><td>R</td><td>Saga</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443017">Goblin Chainwhirler</a></td><td>Red</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443019">Haphazard Bombardment</a></td><td>Red</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443021">Jaya's Immolating Inferno</a></td><td>Red</td><td>R</td><td></td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443031">Siege-Gang Commander</a></td><td>Red</td><td>R</td><td></td></tr>
+	    <tr><td>5*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443034">Squee, the Immortal</a></td><td>Red</td><td>R</td><td>foil</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443035">Two-Headed Giant</a></td><td>Red</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443054">Kamahl's Druidic Vow</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443060">Marwyn, the Nurturer</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>4</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443061">The Mending of Dominaria</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443070">Steel Leaf Champion</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443071">Sylvan Awakening</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443072">Territorial Allosaurus</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443075">Verdant Force</a></td><td>Green</td><td>R</td><td></td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443080">Aryel, Knight of Windgrace</a></td><td>White/Black</td><td>R</td><td></td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443083">Grand Warlord Radha</a></td><td>Red/Green</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443086">Jodah, Archmage Eternal</a></td><td>White/Blue/Red</td><td>R</td><td></td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443088">Oath of Teferi</a></td><td>White/Blue</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443089">Primevals' Glorious Rebirth</a></td><td>White/Black</td><td>R</td><td></td></tr>
+	    <tr><td>2*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443099">Blackblade Reforged</a></td><td>-</td><td>R</td><td>Artifact, foil</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443102">Forebear's Blade</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443103">Gilded Lotus</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443105">Helm of the Host</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443111">Mishra's Self-Replicator</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443121">Thran Temporal Gateway</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>4</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443122">Traxos, Scourge of Kroog</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443126">Cabal Stronghold</a></td><td>Black</td><td>R</td><td>Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443127">Clifftop Retreat</a></td><td>Red/White</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443128">Hinterland Harbor</a></td><td>Green/Blue</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443129">Isolated Chapel</a></td><td>White/Black</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443135">Sulfur Falls</a></td><td>Blue/Red</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=443136">Woodland Cemetery</a></td><td>Black/Green</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=445850">Niambi, Faithful Healer</a></td><td>White/Blue</td><td>R</td><td>Planeswalker Deck</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=445854">Chandra's Outburst</a></td><td>Red</td><td>R</td><td>Planeswalker Deck</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=445958">Firesong and Sunspeaker</a></td><td>White/Red</td><td>R</td><td>Buy-A-Box Promo</td></tr>
+</table>
+
 <!--
 <h1>Uncommons</h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
