--- a/mtg/dominaria.html
+++ b/mtg/dominaria.html
@@ -49,7 +49,7 @@ layout: default
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442927">Urza's Ruinous Blast</a></td><td>White</td><td>R</td><td></td></tr>
 	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442930">The Antiquities War</a></td><td>Blue</td><td>R</td><td>Saga</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442943">Karn's Temporal Sundering</a></td><td>Blue</td><td>R</td><td></td></tr>
-	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442945">The Mirari Conjecture</a></td><td>Blue</td><td>R</td><td>Sage</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442945">The Mirari Conjecture</a></td><td>Blue</td><td>R</td><td>Saga</td></tr>
 	    <tr><td>5*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442946">Naban, Dean of Iteration</a></td><td>Blue</td><td>R</td><td>Pre-release foil promo, foil x2</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442949">Precognition Field</a></td><td>Blue</td><td>R</td><td></td></tr>
 	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442956">Tempest Djinn</a></td><td>Blue</td><td>R</td><td></td></tr>
