--- a/mtg/dominaria.html
+++ b/mtg/dominaria.html
@@ -50,7 +50,7 @@ layout: default
 	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442930">The Antiquities War</a></td><td>Blue</td><td>R</td><td>Saga</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442943">Karn's Temporal Sundering</a></td><td>Blue</td><td>R</td><td>Legendary Sorcery</td></tr>
 	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442945">The Mirari Conjecture</a></td><td>Blue</td><td>R</td><td>Saga</td></tr>
-	    <tr><td>5*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442946">Naban, Dean of Iteration</a></td><td>Blue</td><td>R</td><td>Legendary Human Wizard, Pre-release Foil Promo, Foil x2</td></tr>
+	    <tr><td>5*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442946">Naban, Dean of Iteration</a></td><td>Blue</td><td>R</td><td>Legendary Human Wizard, Foil Promo, Foil x2</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442949">Precognition Field</a></td><td>Blue</td><td>R</td><td>Enchantment</td></tr>
 	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442956">Tempest Djinn</a></td><td>Blue</td><td>R</td><td>Djinn</td></tr>
 	    <tr><td>5</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=442964">Zahid, Djinn of the Lamp</a></td><td>Blue</td><td>R</td><td>Legendary Djinn</td></tr>
