--- a/mtg/ixalan.html
+++ b/mtg/ixalan.html
@@ -31,7 +31,7 @@ layout: default
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435446">Huatli, Dinosaur Knight</a></td><td>White/Red</td><td>M</td><td>Planeswalker Deck</td></tr>
 </table>
 
-<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn+&set=+[%22Ixalan%22]&name=+![Negate]&rarity=+[R]">Rares</h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn+&set=+[%22Ixalan%22]&name=+![Negate]&rarity=+[R]">Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
