--- a/mtg/rivalsofixalan.html
+++ b/mtg/rivalsofixalan.html
@@ -29,7 +29,7 @@ layout: default
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441895">Angrath, Minotaur Pirate</a></td><td>-</td><td>M</td><td>Planeswalker Deck</td></tr>
 </table>
 
-<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn+&set=+[%22Rivals%20of%20Ixalan%22]&rarity=+[R]">Rares</h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn+&set=+[%22Rivals%20of%20Ixalan%22]&rarity=+[R]">Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
