--- a/mtg/ixalan.html
+++ b/mtg/ixalan.html
@@ -14,7 +14,7 @@ layout: default
     </tr>    
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435154">Axis of Mortality</a></td><td>White</td><td>M</td><td>Enchantment</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435196">Wakening Sun's Avatar</a></td><td>White</td><td>M</td><td>Dinosaur Avatar</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435212">Jace, Cunning Castaway</a></td><td>Blue</td><td>M</td><td>Planeswalker</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435212">Jace, Cunning Castaway</a></td><td>Blue</td><td>M</td><td>Legendary Planeswalker</td></tr>
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435218">Overflowing Insight</a></td><td>Blue</td><td>M</td><td>Sorcery</td></tr>
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435248">Boneyard Parley</a></td><td>Black</td><td>M</td><td>Sorcery</td></tr>
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435258">Dire Fleet Ravager</a></td><td>Black</td><td>M</td><td>Orc Pirate Wizard</td></tr>
@@ -23,12 +23,12 @@ layout: default
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435334">Carnage Tyrant</a></td><td>Green</td><td>M</td><td>Dinosaur</td></tr>
 	    <tr><td>4</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435373">Admiral Beckett Brass</a></td><td>Blue/Black/Red</td><td>M</td><td>Legendary Human Pirate</td></tr>
 	    <tr><td>1*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435378">Gishath, Sun's Avatar</a></td><td>White/Red/Green</td><td>M</td><td>Legendary Dinosaur Avatar, Foil</td></tr>
-	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435380">Huatli, Warrior Poet</a></td><td>White/Red</td><td>M</td><td>Planeswalker</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435380">Huatli, Warrior Poet</a></td><td>White/Red</td><td>M</td><td>Legendary Planeswalker</td></tr>
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435386">Tishana, Voice of Thunder</a></td><td>Blue/Green</td><td>M</td><td>Legendary Merfolk Shaman</td></tr>
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435387">Vona, Butcher of Magan</a></td><td>White/Black</td><td>M</td><td>Legendary Vampire Knight</td></tr>
-	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435388">Vraska, Relic Seeker</a></td><td>Black/Green</td><td>M</td><td>Planeswalker</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435441">Jace, Ingenious Mind-Mage</a></td><td>Blue</td><td>M</td><td>Planeswalker Deck</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435446">Huatli, Dinosaur Knight</a></td><td>White/Red</td><td>M</td><td>Planeswalker Deck</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435388">Vraska, Relic Seeker</a></td><td>Black/Green</td><td>M</td><td>Legendary Planeswalker</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435441">Jace, Ingenious Mind-Mage</a></td><td>Blue</td><td>M</td><td>Legendary Planeswalker, Planeswalker Deck</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435446">Huatli, Dinosaur Knight</a></td><td>White/Red</td><td>M</td><td>Legendary Planeswalker, Planeswalker Deck</td></tr>
 </table>
 
 <h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20,cn+&set=+[%22Ixalan%22]&name=+![Negate]&rarity=+[R]">Rares</a></h1>
@@ -41,6 +41,72 @@ layout: default
         <td class="headerCell">Notes</td>
     </tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435153">Ashes of the Abhorrent</a></td><td>White</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435156">Bishop of Rebirth</a></td><td>White</td><td>R</td><td>Vampire Cleric</td></tr>
+	    <tr><td>4*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435164">Goring Ceratops</a></td><td>White</td><td>R</td><td>Dinosaur, Foil</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435170">Kinjalli's Sunwing</a></td><td>White</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435173">Legion's Landing</a></td><td>White</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435176">Mavren Fein, Dusk Apostle</a></td><td>White</td><td>R</td><td>Legendary Vampire Cleric</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435179">Priest of the Wakening Sun</a></td><td>White</td><td>R</td><td>Human Cleric</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435185">Sanguine Sacrament</a></td><td>White</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435186">Settle the Wreckage</a></td><td>White</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435194">Tocatli Honor Guard</a></td><td>White</td><td>R</td><td>Human Soldier</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435198">Arcane Adaptation</a></td><td>Blue</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435201">Daring Saboteur</a></td><td>Blue</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435206">Dreamcaller Siren</a></td><td>Blue</td><td>R</td><td>Siren Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435207">Entrancing Melody</a></td><td>Blue</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435209">Fleet Swallower</a></td><td>Blue</td><td>R</td><td>Fish</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435211">Herald of Secret Streams</a></td><td>Blue</td><td>R</td><td>Merfolk Warrior</td></tr>
+	    <tr><td>2*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435213">Kopala, Warden of Waves</a></td><td>Blue</td><td>R</td><td>Legendary Merfolk Wizard, Foil</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435223">River's Rebuke</a></td><td>Blue</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435226">Search for Azcanta</a></td><td>Blue</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435235">Spell Swindle</a></td><td>Blue</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435243">Arguel's Blood Fast</a></td><td>Black</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435247">Bloodcrazed Paladin</a></td><td>Black</td><td>R</td><td>Vampire Knight</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435253">Deadeye Tracker</a></td><td>Black</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435260">Fathom Fleet Captain</a></td><td>Black</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435271">Revel in Riches</a></td><td>Black</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435272">Ruin Raider</a></td><td>Black</td><td>R</td><td>Orc Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435274">Sanctum Seeker</a></td><td>Black</td><td>R</td><td>Vampire Knight</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435280">Sword-Point Diplomacy</a></td><td>Black</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435283">Vraska's Contempt</a></td><td>Black</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435286">Angrath's Marauders</a></td><td>Red</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435289">Burning Sun's Avatar</a></td><td>Red</td><td>R</td><td>Dinosaur Avatar</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435290">Captain Lannery Storm</a></td><td>Red</td><td>R</td><td>Legendary Human Pirate</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435291">Captivating Crew</a></td><td>Red</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435308">Rampaging Ferocidon</a></td><td>Red</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435310">Repeating Barrage</a></td><td>Red</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435319">Sunbird's Invocation</a></td><td>Red</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435324">Tilonalli's Skinshifter</a></td><td>Red</td><td>R</td><td>Human Shaman</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435327">Vance's Blasting Cannons</a></td><td>Red</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435339">Deathgorge Scavenger</a></td><td>Green</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435340">Deeproot Champion</a></td><td>Green</td><td>R</td><td>Merfolk Shaman</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435344">Emperor's Vanguard</a></td><td>Green</td><td>R</td><td>Human Scout</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435346">Growing Rites of Itlimoc</a></td><td>Green</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435355">Old-Growth Dryads</a></td><td>Green</td><td>R</td><td>Dryad</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435359">Ripjaw Raptor</a></td><td>Green</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435362">Shapers' Sanctuary</a></td><td>Green</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435369">Verdant Sun's Avatar</a></td><td>Green</td><td>R</td><td>Dinosaur Avatar</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435371">Waker of the Wilds</a></td><td>Green</td><td>R</td><td>Merfolk Shaman</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435379">Hostage Taker</a></td><td>Blue/Black</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435383">Regisaur Alpha</a></td><td>Red/Green</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435390">Conqueror's Galleon</a></td><td>-</td><td>R</td><td>Artifact / Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435392">Dowsing Dagger</a></td><td>-</td><td>R</td><td>Artifact / Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435396">Fell Flagship</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435401">Primal Amulet</a></td><td>-</td><td>R</td><td>Artifact / Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435405">Shadowed Caravel</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435407">Sorcerous Spyglass</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435408">Thaumatic Compass</a></td><td>-</td><td>R</td><td>Artifact / Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435410">Treasure Map</a></td><td>-</td><td>R</td><td>Artifact / Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435412">Vanquisher's Banner</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435413">Dragonskull Summit</a></td><td>Black/Red</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435414">Drowned Catacomb</a></td><td>Blue/Black</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435416">Glacial Fortress</a></td><td>White/Blue</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435417">Rootbound Crag</a></td><td>Red/Green</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435418">Sunpetal Grove</a></td><td>Green/White</td><td>R</td><td>Check Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435443">Grasping Current</a></td><td>Blue</td><td>R</td><td>Sorcery, Planeswalker Deck</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=435449">Sun-Blessed Mount</a></td><td>White/Red</td><td>R</td><td>Dinosaur, Planeswalker Deck</td></tr>
+</table>
+
 <!--
 <h1>Uncommons</h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
